tests/baselines/reference/ambientExternalModuleInAnotherExternalModule.errors.txt
==== tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts (4 errors) ====
    
    class D { }
    export = D;
    
    declare module "ext" {
                   ~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
        export class C { }
    }
    
    // Cannot resolve this ext module reference
    import ext = require("ext");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"ext"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    var x = ext;
            ~~~
!!! error TS2095: Could not find symbol 'ext'.